<resources>
    <string name="app_name">SubmissionStoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="atau">Atau</string>
    <string name="daftar">Daftar</string>
    <string name="image">Image</string>
    <string name="add_story">Add story</string>
    <string name="extended_fab_content_desc">extend fab desc</string>
    <string name="description">Description</string>
    <string name="created_at">Created at</string>
    <string name="latitude">Latitude</string>
    <string name="longatitude">Longatitude</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera_x">Camera X</string>
    <string name="camera">Camera</string>
    <string name="preview_image_description">Preview Image Description</string>
    <string name="desc">Write…</string>
    <string name="data_kosong">Data kosong!</string>
    <string name="invalid_event_id">Invalid Event ID</string>
    <string name="email_and_password_cannot_be_empty">Email and password cannot be empty</string>
    <string name="login_success">Login Success!</string>
    <string name="deskripsi_dan_gambar_tidak_boleh_kosong">Deskripsi dan gambar tidak boleh kosong</string>
    <string name="berhasil_unggah_cerita">Berhasil unggah cerita!</string>
    <string name="aktifkan_gps">Harap aktifkan GPS untuk mendapatkan lokasi</string>
    <string name="gagal_mendapatkan_lokasi">Gagal mendapatkan lokasi</string>
    <string name="izin_lokasi_ditolak">Izin lokasi ditolak</string>
    <string name="gagal_membuat_file_gambar">Gagal membuat file gambar</string>
    <string name="izin_diberikan">Izin diberikan</string>
    <string name="izin_ditolak">Izin Ditolak</string>

</resources>